Adding IDM Functionality and using phone macd for Phone Plans. Building new MACD section under Phone Plan for Multi task deployment
